<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_margin="15dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/news_row_cardView"
        app:cardCornerRadius="5dp"
        android:elevation="12dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:alpha="0.8"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            android:id="@+id/news_row_dateView"
            android:layout_width="match_parent"
            android:layout_height="25dp">

            <TextView
                android:id="@+id/news_row_date"
                android:text="@string/may_12_2019"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:background="@android:color/holo_green_dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/rawimage"
                android:id="@+id/news_row_newsImageId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@drawable/photoapp"
                app:srcCompat="@drawable/photoapp" />

            <TextView
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="Title"
                android:layout_below="@id/news_row_newsImageId"
                android:id="@+id/news_row_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#0000ff"
                android:padding="5dp"
                android:text="@string/author_gaurav_gupta"
                android:layout_below="@id/news_row_title"
                android:id="@+id/news_row_authorTitle"
                android:drawableLeft="@drawable/ic_action_name"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/news_row_authorTitle"
                android:id="@+id/news_row_descriptionNews"
                android:text="News Goes Here"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>